Better layout for omnibar search results

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -7,7 +7,7 @@
         </a>
       </div>
 
-      <form role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
+      <form role="form" class="group-mixed bottom-padded" autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
           <textarea type="text" ng-model="titlebar.text" ng-keydown="omnibarTitlebarTextKeyDown($event)" editable-field
           editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="save to inbox / search&#8230;" maxlength="128" required ></textarea>
@@ -25,10 +25,10 @@
         <div class="group-mixed--middle">
           <a href class="link-search-result"
           ng-click="initializeEditor(searchResult.transientProperties.itemType, searchResult)">
-            <span class="text-search-result" ng-bind="searchResult.title"></span>
+            <span class="text-search-result" clamp=2 ng-bind="searchResult.title"></span>
           </a>
         </div>
-        <div class="group-mixed--right">
+        <div class="group-mixed--right top">
           <span class="text-search-type" ng-bind="searchResult.transientProperties.itemType"></span>
         </div>
       </div>
