--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,4 +1,4 @@
-<div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container drawer-handle="left">
+<div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
   <section class="container-content" list="contexts" list-order="top">
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="{tagType:'context'}" list-item-add-save="saveContext(newItem)">
