Implemented favoriting notes

--- a/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
+++ b/frontend/core/src/main/webapp/static/app/notes/notesRecent.html
@@ -1,5 +1,6 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
-  <section class="container-content" list="allNotes" list-order="top" list-recent list-open="openEditor('note', {})">
+  <section class="container-content" list="allNotes" list-order="top" list-recent
+  list-open="openEditor('note', {transientProperties: {favorited: false}})">
     <div class="group-mixed heading">
       <div class="group-mhixed--middle">
         <h2 class="group-heading justified row">recent</h2>
