--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -14,9 +14,9 @@
     <div list-item-add="getNewTaskWithContext(context)" list-item-add-save="saveTask(newItem)"
     ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
-    ng-repeat="task in recentTasks = (getList() | paramFilter:isListItemVisible) | orderBy:getTaskModified:true
+    ng-repeat="task in contextTasks = (getList() | paramFilter:isListItemVisible) | orderBy:getTaskModified:true
     | limitTo: currentListLimitTo"
-    list-item="recentTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+    list-item="contextTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
