--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,10 +1,9 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
-  <section class="container-content" list="notes | filter:'transientProperties.favorite'" list-order="top" list-open="openEditor('note', {transientProperties: {favorite:true}})">
+  <section class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true}})">
     <h2 class="group-heading row">favorite</h2>
-    <div class="row" ng-repeat="note in getList()
-    | orderBy:'created':true
-    | limitTo: currentListLimitTo"
-    list-item="getList().length" list-item-has-checkbox="false"></div>
+    <div class="animate-list-item-leave tall"
+    ng-repeat="note in favoritedNotes = (getList() | orderBy:'favorited':true | limitTo: currentListLimitTo)"
+    list-item="favoritedNotes.length" ng-include="'static/app/notes/noteListItem.html'"></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
 </div>
