--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -49,6 +49,9 @@
 
         <footer ng-hide="mode === 'fullScreen'" class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
+            <a href ng-click="clickFavorite()" class="group-symmetrical--left">
+              <span class="text-star" ng-class="!note.transientProperties.favorited && 'inactive'"></span>
+            </a>
             <a href ng-click="swipeToAdvanced()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
             </a>
