Changed omnibar convert links to be in sync with those found in item editor and with menu order as well.

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -36,11 +36,11 @@
 
     <footer class="container-content--after" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
       <div class="group-symmetrical">
-        <a href class="group-symmetrical--left" ng-click="convertToNote()">
-          <span class="text-convert">note</span>
-        </a>
-        <a href class="group-symmetrical--right" ng-click="convertToTask()">
+        <a href class="group-symmetrical--left" ng-click="convertToTask()">
           <span class="text-convert">task</span>
+        </a>
+        <a href class="group-symmetrical--right" ng-click="convertToNote()">
+          <span class="text-convert">note</span>
         </a>
       </div>
     </footer>
