Nicer notes list layout

--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,7 +1,7 @@
 <div class="group-mixed">
   <div class="group-mixed--middle">
-    <a href swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
-      <span class="text-link" ng-bind="note.title"></span>
+    <a href class="link-note-heading" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
+      <span class="text-heading-primary" ng-bind="note.title"></span>
     </a>
   </div>
 </div>
