Some work towards trash

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -128,6 +128,8 @@
   <script src="static/app/main/PageNotFoundController.js"></script>
   <script src="static/app/main/SynchronizeService.js"></script>
   <script src="static/app/main/ToolbarController.js"></script>
+  <script src="static/app/main/TrashController.js"></script>
+
 
   <script src="static/app/entry/EntryController.js"></script>
   <script src="static/app/entry/ResetController.js"></script>
