--- a/frontend/core/src/main/webapp/static/app/main/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageNotFound.html
@@ -4,7 +4,7 @@
   <div>
     <ul>
       <li>
-        <h2><a href="#/{{ownerPrefix}}/tasks">tasks</a></h2>
+        <h2><a href="#/my">home</a></h2>
       </li>
     </ul>
   </div>
