--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -1,13 +1,16 @@
-<div class="container-fluid" ng-controller="ListEditorController">
+<div class="container-fluid" ng-controller="ListEditorController" ng-class="list.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
-        <a href class="group-symmetrical--left link-navigation highlighted" ng-click="endListEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() ? 'save' : 'back'"></span>
+        <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endListEdit()" >
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !list.deleted ? 'save' : 'back'"></span>
         </a>
-        <a href class="group-symmetrical--right" ng-click="deleteListInEdit()" >
-          <span class="text-trash"></span>
-        </a>
+        <div class="group-symmetrical--right">
+          <a ng-if="!list.deleted" href ng-click="deleteListInEdit()" >
+            <span class="text-trash"></span>
+          </a>
+          <a ng-if="list.deleted" class="link-navigation highlighted active" href ng-click="undeleteList(list)"><span class="text-navigation">restore</span></a>
+        </div>
       </div>
 
       <form role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
