--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -1,10 +1,9 @@
-<div class="container-fluid" ng-controller="NoteEditorController">
+<div class="container-fluid" ng-controller="NoteEditorController" ng-class="note.deleted && 'container-disabled'">
   <header class="container-titlebar">
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
-        <a href class="group-symmetrical--left link-navigation" ng-click="endNoteEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() ? 'save' : 'back'">
-        </a>
+        <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endNoteEdit()" >
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !note.deleted ? 'save' : 'back'"></span>
         </a>
         <div ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large">
           <a href ng-class="link-navigation" ng-click="toggleNoteEditMode()">
@@ -12,7 +11,8 @@
           </a>
         </div>
         <div class="group-symmetrical--right">
-          <a href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
+          <a ng-if="!note.deleted" href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
+          <a ng-if="note.deleted" class="link-navigation highlighted active" href ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
         </div>
       </div>
 
