--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,9 +1,10 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
-  <section class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true}})">
-    <h2 class="group-heading row">favorite</h2>
+  <section class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true}})" swiper-prevent>
+    <h2 class="group-heading justified row">favorite</h2>
     <div class="animate-list-item-leave tall"
-    ng-repeat="note in favoritedNotes = (getList() | orderBy:'favorited':true | limitTo: currentListLimitTo)"
-    list-item="favoritedNotes.length" ng-include="'static/app/notes/noteListItem.html'"></div>
+    ng-repeat="note in getList() | orderBy:'favorited':true | limitTo: currentListLimitTo"
+    list-item="getList().length" ng-include="'static/app/notes/noteListItem.html'"></div>
+    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
 </div>
