--- a/frontend/core/src/main/webapp/static/app/lists/listNotes.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listNotes.html
@@ -1,13 +1,12 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container>
-  <section class="container-content" list list-open="openEditor('note', {transientProperties: {list:list.uuid}})">
-    <div list>
-      <h2 class="group-heading row">notes</h2>
-      <div class="animate-list-item-leave"
-      ng-repeat="note in listNotes = (allNotes | itemsFilter:{name:'byListUUID', filterBy: list.uuid})
-      | limitTo: currentListLimitTo"
-      list-item="listNotes.length" ng-include="'static/app/notes/noteListItem.html'"
-      ng-style="{maxHeight: getNoteListItemHeight(note)}"></div>
-    </div>
+  <section class="container-content" list="allNotes | itemsFilter:{name:'byListUUID', filterBy: list.uuid}" list-open="openEditor('note', {transientProperties: {list:list.uuid}})" list-order="top" swiper-prevent>
+    <h2 class="group-heading justified row">notes</h2>
+
+    <div class="animate-list-item-leave tall"
+    ng-repeat="note in getList() | itemsFilter:{name:'byListUUID', filterBy: list.uuid}
+    | orderBy:'created':true | limitTo: currentListLimitTo"
+    list-item="getList().length" ng-include="'static/app/notes/noteListItem.html'"></div>
+    <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('list')"></footer>
 </div>
