--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container drawer-handle="left">
-  <section class="container-content" list="lists" list-order="top">
+  <section class="container-content" list="lists" list-order="top" swiper-prevent>
     <h2 class="group-heading justified row">active</h2>
     <div list-item-add="{}" list-item-add-save="saveList(newItem)"
     ng-include="'static/app/lists/listListItemAdd.html'"></div>
