--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container>
-  <section class="container-content" list="archivedLists" list-order="top">
+  <section class="container-content" list="archivedLists" list-order="top" swiper-prevent>
     <h2 class="group-heading justified row">archived</h2>
     <div list-item-add="{}" list-item-add-save="saveAndArchiveList(newItem)"
     ng-include="'static/app/lists/listListItemAdd.html'"></div>
