--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,5 +1,5 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section class="container-content" list="contexts" list-order="top">
+  <section class="container-content" list="contexts" list-order="top" swiper-prevent>
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="{tagType:'context'}" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed swiper-no-swiping"
@@ -19,8 +19,8 @@
       </form>
     </div>
     <div class="animate-list-item-leave"
-    ng-repeat="context in contextsList = (getList()  | orderBy:'created':true | limitTo: currentListLimitTo)"
-    list-item="contextsList.length">
+    ng-repeat="context in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
+    list-item="getList().length">
       <div class="group-mixed">
         <a href class="group-mixed--middle" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.title"></span>
