--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -31,7 +31,7 @@
           <span class="text-navigation-forward large"></span>
         </a>
       </div>
-    </div>
+    </div-->
     <div class="group-mixed">
       <a href class="group-mixed--middle" swiper-click="swipeToDetails('about')">
         <span class="text-link">about</span>
@@ -41,7 +41,7 @@
           <span class="text-navigation-forward large"></span>
         </a>
       </div>
-    </div-->
+    </div>
     <div ng-if="isAdmin()" class="group-mixed">
       <a href class="group-mixed--middle" swiper-click="changeFeature('admin')">
         <span class="text-link">admin</span>
@@ -50,7 +50,7 @@
 
   </section>
   <footer class="container-content--after group-btn">
-    <button class="btn-active" ng-click="logOut()">
+    <button class="btn-action" ng-click="logOut()">
       <span class="text-btn">log out</span>
     </button>
   </footer>
