--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -29,6 +29,7 @@
   <script src="static/lib/angularjs/angular-mocks.js"></script>
   <script src="static/lib/angularjs/angular-route.js"></script>
   <script src="static/lib/angularjs/angular-messages.js"></script>
+  <script src="static/lib/angularjs/angular-sanitize.js"></script>
 
   <script src="static/lib/base64.js"></script>
   <script src="static/lib/elastic.js"></script>
