--- a/frontend/core/src/main/webapp/static/app/user/userEditor.html
+++ b/frontend/core/src/main/webapp/static/app/user/userEditor.html
@@ -10,8 +10,8 @@
   </header>
 
   <div class="container-fluid--inner" ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}">
-    <div class="container-content" drawer-override-aisle="right">
-      <h2 ng-if="mode === 'password'" class="group-heading row-form">change password</h2>
+    <div ng-if="mode === 'password'" class="container-content" drawer-override-aisle="right">
+      <h2 class="group-heading row-form">change password</h2>
       <div class="row-form">
         <input type="password" name="password" id="password" ng-model="user.password"
         ng-minlength="7" placeholder="enter old password&#8230;" required />
@@ -21,8 +21,14 @@
         ng-minlength="7" placeholder="enter new password&#8230;" required />
       </div>
     </div>
+    <div ng-if="mode === 'terms'" class="container-content" drawer-override-aisle="right">
+      <div class="group-html-external row" ng-bind-html="user.terms"></div>
+    </div>
+    <div ng-if="mode === 'privacy'" class="container-content" drawer-override-aisle="right">
+      <div class="group-html-external row" ng-bind-html="user.privacy"></div>
+    </div>
     <footer class="container-content--after group-btn" ng-style="{height: EDITOR_FOOTER_HEIGHT, bottom: -EDITOR_FOOTER_HEIGHT}">
-      <button type="submit" class="btn-action" ng-disabled="!userForm.$valid" ng-click="changePassword(user.passwordOld, user.passwordNew)">
+      <button ng-if="mode === 'password'"type="submit" class="btn-action" ng-disabled="!userForm.$valid" ng-click="changePassword(user.passwordOld, user.passwordNew)">
         <span class="text-btn">done</span>
       </button>
     </footer>
