Fixed font on iOS 8

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -3,8 +3,10 @@
     <div class="group-instruction-jumbotron row">
       <p class="group-instruction--header"><span class="text-logo"></span></p>
       <p class="group-instruction--main">
-        change<br/>the way<br/>you<br/>
-        <span class="text-active">think</span>
+        <span class="text-jumbotron">change</span><br/>
+        <span class="text-jumbotron">the way</span><br/>
+        <span class="text-jumbotron">you</span><br/>
+        <span class="text-jumbotron active">think</span>
         </p>
     </div>
   </section>
