--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -10,10 +10,8 @@
             <span class="text-navigation downplayed">note settings</span>
           </a>
         </div>
-        <div class="group-symmetrical--right">
-          <a ng-if="!note.deleted" href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
-          <a ng-if="note.deleted" class="link-navigation highlighted active" href ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
-        </div>
+        <a ng-if="!note.deleted" class="group-symmetrical--right" href ng-click="deleteNoteInEdit()"><span class="text-trash"></span></a>
+        <a ng-if="note.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteNote(note)"><span class="text-navigation">restore</span></a>
       </div>
 
       <form ng-hide="hideNoteTitle" role="form" class="group-mixed" autocapitalize="none" autocorrect="off">
