Fixed change password

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -94,6 +94,7 @@
   <script src="static/app/base/verticalResizeDirective.js"></script>
 
   <script src="static/app/user/UserController.js"></script>
+  <script src="static/app/user/UserEditorController.js"></script>
   <script src="static/app/user/UserService.js"></script>
 
   <script src="static/app/tasks/TasksController.js"></script>
