--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -6,7 +6,7 @@
         <span class="text-jumbotron">change</span><br/>
         <span class="text-jumbotron">the way</span><br/>
         <span class="text-jumbotron">you</span><br/>
-        <span class="text-jumbotron active">think</span>
+        <span class="text-jumbotron highlighted">think</span>
         </p>
     </div>
   </section>
