--- a/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
@@ -4,8 +4,9 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/home" slide-index=0 ng-include="'static/app/entry/entryHome.html'"></div>
         <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/main" slide-index=1 ng-include="'static/app/entry/entryMain.html'"></div>
-        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/details" slide-index=2 ng-include="'static/app/entry/entryForgot.html'"></div>
+        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/details" slide-index=2 ng-include="'static/app/entry/entryDetails.html'"></div>
       </div>
     </div>
   </div>
+  <div toaster="entry"></div>
 </div>
