--- a/frontend/core/src/main/webapp/static/app/entry/entryMain.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryMain.html
@@ -12,24 +12,37 @@
       placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
       editable-field-register-callbacks="registerEntryMainEmailInputCallbacks(focus, blur)" required />
     </div>
+    <div class="group-error row-form">
+      <div ng-if="signupForm.email.$touched" ng-messages="signupForm.email.$error">
+        <span class="text-error" ng-message="email">invalid email address</span>
+      </div>
+    </div>
     <div class="row-form">
       <input type="password" name="password" id="password" ng-model="user.password"
       ng-minlength="7" placeholder="enter password&#8230;" editable-field="getEditableFieldSticky()"
       editable-field-register-callbacks="registerEntryMainPasswordInputCallbacks(focus, blur)" required />
     </div>
-    <div class="group-mixed">
-      <div class="group-mixed--left">
-        <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="signupFormAgree" />
-      </div>
-      <div class="group-mixed--middle text-details">i have read and agree to the <a href ng-click="gotoTermsOfService()">terms of service</a> and <a href ng-click="gotoPrivacyPolicy()">privacy policy</a></div>
-    </div>
     <div class="group-error row-form">
-      <div ng-if="signupForm.email.$touched" ng-messages="signupForm.email.$error">
-        <span class="text-error" ng-message="email">invalid email address</span>
-      </div>
       <div ng-if="signupForm.password.$touched" ng-messages="signupForm.password.$error">
         <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
       </div>
+    </div>
+    <div class="group-mixed details height-large">
+      <div class="group-mixed--left">
+        <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="signupFormAgree" />
+      </div>
+      <div class="group-mixed--middle">
+        <span class="text-details">i have read and agree to the</span>
+        <a href class="highlighted" ng-click="swipeToDetails('terms')" editable-field-deactivate>
+          <span class="text-details">terms of service</span>
+        </a>
+        <span class="text-details">and</span>
+        <a href class="highlighted" ng-click="swipeToDetails('privacy')" editable-field-deactivate>
+          <span class="text-details">privacy policy</span>
+        </a>
+      </div>
+    </div>
+    <div class="group-error height-large row-form">
       <span ng-if="signupFailed" class="text-error">user with given email already registered</span>
       <span ng-if="entryOffline" class="text-error">can't connect to server. are you online?</span>
       <span ng-if="loginFailed" class="text-error">could not login with new credentials</span>
@@ -48,7 +61,7 @@
       <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation" editable-field-deactivate>
         <span class="text-navigation-back">back</span>
       </a>
-      <a href ng-click="swipeToForgot()" class="group-symmetrical--right link-navigation" editable-field-deactivate>
+      <a href ng-click="swipeToDetails()" class="group-symmetrical--right link-navigation" editable-field-deactivate>
         <span class="text-navigation-forward">forgot?</span>
       </a>
     </header>
@@ -58,23 +71,27 @@
       placeholder="enter email&#8230;" editable-field="getEditableFieldSticky()"
       editable-field-register-callbacks="registerEntryMainEmailInputCallbacks(focus, blur)" required />
     </div>
-    <div class="row-form">
-      <input type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" editable-field="getEditableFieldSticky()"
-      editable-field-register-callbacks="registerEntryMainPasswordInputCallbacks(focus, blur)" required />
-    </div>
-    <div ng-if="!rememberByDefault()" class="group-mixed">
-      <div class="group-mixed--left">
-        <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
-      </div>
-      <span class="group-mixed--middle">remember</span>
-    </div>
     <div class="group-error row-form">
       <div ng-if="loginForm.email.$touched" ng-messages="loginForm.email.$error">
         <span class="text-error" ng-message="email">invalid email address</span>
       </div>
+    </div>
+    <div class="row-form">
+      <input type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" editable-field="getEditableFieldSticky()"
+      editable-field-register-callbacks="registerEntryMainPasswordInputCallbacks(focus, blur)" required />
+    </div>
+    <div class="group-error row-form">
       <div ng-if="loginForm.password.$touched" ng-messages="loginForm.password.$error">
         <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
       </div>
+    </div>
+    <div ng-if="!rememberByDefault()" class="group-mixed details height-large">
+      <div class="group-mixed--left">
+        <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
+      </div>
+      <span class="group-mixed--middle text-details">remember</span>
+    </div>
+    <div class="group-error height-large row-form">
       <span ng-if="loginFailed" class="text-error">invalid email or password</span>
       <span ng-if="entryOffline" class="text-error">can't connect to server. are you online?</span>
     </div>
